add comment to update image

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: gpx-surface-analyzer
-        image: my-registry/gpx-surface-analyzer:latest
+        image: my-registry/gpx-surface-analyzer:latest # update image with ghcr image
         ports:
         - containerPort: 5000
         resources:
